--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,20 @@
     align-items: center;
 }
 
+@media screen and (max-width: 1000px) {
+    .shopping-cart {
+        background-color: transparent;
+    }
+}
+
 .shopping-cart__icon {
     margin: 0 6px 0 10.5px;
+}
+
+@media screen and (max-width: 1000px) {
+    .shopping-cart__icon {
+        margin: 0 6px 0 0;
+    }
 }
 
 .items-number {
@@ -53,6 +65,12 @@
     line-height: 22px;
     color: rgba(255, 255, 255, 0.9);
     margin-bottom: 5px;
+}
+
+@media screen and (max-width: 1000px) {
+    .items-number {
+        color: rgba(0, 0, 0, 0.9);
+    }
 }
 
 @media screen and (max-width: 1000px) {
@@ -242,4 +260,68 @@
     margin: 1px 26.5px 0 0;
 }
 
+.mobile-header {
+    display: flex;
+    justify-content: space-between;
+    height: 48px;
+}
 
+.mobile-wrapper {
+    display: flex;
+    margin-left: 15px;
+}
+
+.hamburger-menu {
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    font-size: 26px;
+}
+
+.hero-section {
+    position: relative;
+    object-fit: contain;
+    z-index: 4;
+}
+
+.hero-image {
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+
+.hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.75);
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    z-index: 100;
+}
+
+.hero-title {
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 36px;
+    margin-bottom: 6px;
+
+}
+
+.hero-description {
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 19px;
+    color: rgba(255, 255, 255, 0.9);
+    width: 80%;
+    margin: auto;
+}
