--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,39 @@
     box-sizing: border-box;
 }
 
+@media screen and (max-width: 1000px) {
+    .desktop-header {
+        visibility: hidden;
+        display: none;
+    }
+}
+
+.mobile-header {
+    display: none;
+    visibility: hidden;
+}
+
+@media screen and (max-width: 1000px) {
+    .mobile-header {
+        display: flex;
+        justify-content: space-between;
+        height: 48px;
+        visibility: visible;
+    }
+}
+
+.body {
+    visibility: hidden;
+    display: none;
+}
+
+@media screen and (max-width: 1000px) {
+    .body {
+        visibility: visible;
+        display: unset;
+    }
+}
+
 .utility-bar {
     height: 34px;
     width: 100vw;
@@ -73,13 +106,6 @@
     }
 }
 
-@media screen and (max-width: 1000px) {
-    .desktop-header {
-        visibility: hidden;
-        display: none;
-    }
-}
-
 .nav-bar {
     display: flex;
     flex-direction: row;
@@ -97,6 +123,12 @@
 .logo {
     width: 116px;
     margin-left: 14px;
+}
+
+@media screen and (max-width: 1000px) {
+    .logo {
+        width: 90px;
+    }
 }
 
 .nav-tabs {
@@ -260,12 +292,6 @@
     margin: 1px 26.5px 0 0;
 }
 
-.mobile-header {
-    display: flex;
-    justify-content: space-between;
-    height: 48px;
-}
-
 .mobile-wrapper {
     display: flex;
     margin-left: 15px;
@@ -303,7 +329,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
     z-index: 100;
 }
 
@@ -313,7 +338,7 @@
     font-size: 32px;
     line-height: 36px;
     margin-bottom: 6px;
-
+    margin-left: 18px;
 }
 
 .hero-description {
@@ -322,6 +347,87 @@
     font-size: 15px;
     line-height: 19px;
     color: rgba(255, 255, 255, 0.9);
-    width: 80%;
-    margin: auto;
+    width: 85%;
+    text-align: left;
+    margin-left: 18px;
+}
+
+.equipment-wrapper {
+    display: flex;
+}
+
+.back-button {
+    margin-left: 18px;
+    margin-top: 14px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.equipment {
+    margin-left: 11px;
+    margin-top: 14px;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 19px;
+    color: #171717;
+}
+
+.introducing {
+    text-transform: uppercase;
+    color: #666666;
+    margin-left: 18px;
+    margin-top: 24px;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 14px;
+    line-height: 19px;
+}
+
+.body-title {
+    color: #171717;
+    margin-top: 5px;
+    margin-left: 18px;
+    text-align: left;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+    font-size: 22px;
+    line-height: 28px;
+    width: 85%;
+}
+
+.body-description {
+    margin-top: 9px;
+    margin-left: 18px;
+    text-align: left;
+    width: 85%;
+    font-family: 'Public Sans', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 22px;
+}
+
+.learn-more-wrapper {
+    display: flex;
+}
+
+.learn-more {
+    text-transform: uppercase;
+    color: #B81830;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 20px;
+    margin: 16px 6px 39px 18px;
+}
+
+.red-arrow {
+    background: transparent;
+    border: none;
+    margin-top: 18.5px;
+    height: 8px;
+}
+
+.video-screenshot {
+    margin-left: 10px;
 }
