--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,11 @@
     .shopping-cart__icon {
         margin: 0 6px 0 0;
     }
+    .shopping-cart__icon:hover {
+        opacity: 0.85;
+    }
 }
+
 
 .items-number {
     font-family: 'Noto Sans', sans-serif;
@@ -312,6 +316,11 @@
     z-index: 4;
 }
 
+.hero-section.hide {
+    display: none;
+    visibility: hidden;
+}
+
 .hero-image {
     width: 100%;
     height: auto;
@@ -329,7 +338,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    z-index: 100;
+    z-index: 5;
 }
 
 .hero-title {
@@ -430,4 +439,95 @@
 
 .video-screenshot {
     margin-left: 10px;
+}
+
+.mobile-menu {
+    background: #E5E5E5;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    visibility: hidden;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+
+.mobile-menu.active {
+    visibility: visible;
+}
+
+.menu-background {
+    height: 38px;
+    background: #171717;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu-text {
+    color: #ffffff;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 26px;
+    margin-left: 16px;
+}
+
+.close-button {
+    background: transparent;
+    height: max-content;
+    border: none;
+    margin-right: 16px;
+    cursor: pointer;
+}
+
+.menu-tab {
+    height: 50px;
+    border-bottom: 1px solid #D0D0D0;
+    background: #ffffff;
+}
+
+.menu-link {
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-decoration: none;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.menu-link__text {
+    text-transform: uppercase;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 19px;
+    color: #000000;
+    text-decoration: none;
+}
+
+.menu-bottom-link {
+    display: flex;
+    text-decoration: none;
+    margin-left: 16px;
+    margin-top: 26px;
+}
+
+.menu-bottom-link__text {
+    color: rgba(0, 0, 0, 0.9);
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 18px;
+    margin: 0 6px 0 8px;
+}
+
+.flag-text {
+    color: #171717;
+    font-family: 'Noto Sans', sans-serif;
+    font-weight: 700;
+    font-size: 13px;
+    line-height: 22px;
+    margin-left: 7px;
 }
